--- a/public/styles.scss
+++ b/public/styles.scss
@@ -7,6 +7,7 @@ $Dark-green: #28b485;
 $Black: #212121;
 $White: #FAFAFA;
 $Grey: #E0E0E0;
+$Light-grey: #f7f7f7;
 $Orange: #ff9900;
 
 * {
@@ -24,4 +25,8 @@ p {
     -webkit-background-clip: text;
     color: transparent;
 
+}
+
+.center-text {
+    text-align: center;
 }
